visualización de datos mejorado