@@ -3,10 +3,9 @@ package com.jma.marketmotor.service.impl;
 import com.jma.marketmotor.api.EmpleadoResponse;
 import com.jma.marketmotor.dto.EmpleadoDto;
 import com.jma.marketmotor.entity.EmpleadoEntity;
-import com.jma.marketmotor.entity.RolEntity;
 import com.jma.marketmotor.entity.UsuarioEntity;
 import com.jma.marketmotor.mapping.EmpleadoMapper;
-import com.jma.marketmotor.mapping.RolMapper;
+import com.jma.marketmotor.mapping.UsuarioMapper;
 import com.jma.marketmotor.repository.EmpleadoRepository;
 import com.jma.marketmotor.repository.UsuarioRepository;
 import com.jma.marketmotor.service.EmpleadoService;
@@ -18,7 +17,6 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EmpleadoServiceImpl implements EmpleadoService<EmpleadoDto> {
@@ -62,7 +60,25 @@ public class EmpleadoServiceImpl implements EmpleadoService<EmpleadoDto> {
 
     @Override
     public List<EmpleadoDto> guardarTodos(List<EmpleadoDto> list) {
-        return empleadoRepository.saveAll(list.stream().map(EmpleadoMapper::mapToEntity).collect(Collectors.toList())).stream().map(EmpleadoMapper::mapToDto).collect(Collectors.toList());
+
+        List<UsuarioEntity> usuarioEntities = list.stream().map( e -> usuarioRepository.findById(e.getUsuarioDto().getId()).orElse(null)).toList();
+        List<EmpleadoEntity> empleadoEntities = list.stream().map(EmpleadoMapper::mapToEntity).toList();
+
+        for (int i = 0; i < empleadoEntities.size(); i++) {
+            empleadoEntities.get(i).setUsuario(usuarioEntities.get(i));
+        }
+        List<EmpleadoEntity> empleadosGuardados = empleadoRepository.saveAll(empleadoEntities);
+        return getEmpleadoDtosWithSetUsuarioDto(empleadosGuardados);
+    }
+
+    private List<EmpleadoDto> getEmpleadoDtosWithSetUsuarioDto(List<EmpleadoEntity> empleadosGuardados) {
+        List<EmpleadoDto> empleadosDtoObt = empleadosGuardados.stream().map(EmpleadoMapper::mapToDto).toList();
+
+        for (int i = 0; i < empleadosDtoObt.size(); i++) {
+            empleadosDtoObt.get(i).setUsuarioDto(UsuarioMapper.mapToDto(empleadosGuardados.get(i).getUsuario()));
+        }
+
+        return empleadosDtoObt;
     }
 
     @Override
@@ -78,7 +94,9 @@ public class EmpleadoServiceImpl implements EmpleadoService<EmpleadoDto> {
 
     @Override
     public List<EmpleadoDto> obtenerTodos() {
-        return empleadoRepository.findAll().stream().map(EmpleadoMapper::mapToDto).collect(Collectors.toList());
+
+        List<EmpleadoEntity> empleadoEntities = empleadoRepository.findAll();
+        return getEmpleadoDtosWithSetUsuarioDto(empleadoEntities);
     }
 
     @Override
@@ -93,7 +111,11 @@ public class EmpleadoServiceImpl implements EmpleadoService<EmpleadoDto> {
 
     @Override
     public EmpleadoDto obtenerPorId(Object id) {
-        return empleadoRepository.findById((Long)id).map(EmpleadoMapper::mapToDto).orElse(new EmpleadoDto());
+        EmpleadoEntity empleadoEntity = empleadoRepository.findById((Long)id).orElse(new EmpleadoEntity());
+        EmpleadoDto empleadoDto = EmpleadoMapper.mapToDto(empleadoEntity);
+        empleadoDto.setUsuarioDto(UsuarioMapper.mapToDto(empleadoEntity.getUsuario()));
+
+        return empleadoDto;
     }
 
     @Override
